# Low-Latency-ML-engine

./: .gitignore  README.md
analysis/: analysis.py
cpp/: CMakeLists.txt
cpp/common/: alloc_guard.cpp  alloc_guard.h  correctness.cpp  correctness.h  measure.cpp  measure.h  noise_floor  noise_floor.c  npy_loader.cpp  npy_loader.h  tensor.h  weight_loader.cpp  weight_loader.h
cpp/stage0_naive/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
cpp/stage1_prealloc/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
cpp/stage2_fused/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
cpp/stage3_tiled/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
cpp/stage4a_int8_pertensor/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
cpp/stage4b_int8_perchannel/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
cpp/stage5_fp32_simd/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
data/: calib_5k_indices.npy  inputs_1k.npy  inputs_1k_indices.npy  outputs_1k_medium.npy  outputs_1k_small.npy
framework_baselines/: _bench_harness.py  onnx_runtime.py  pytorch_eager.py  torchscript.py
models/: calibration_medium.json  calibration_small.json  dataset.py  medium.onnx  model.py  small.onnx  small.onnx.data  small.pt  splits.json  train.py  weights_4a_medium.npz  weights_4a_small.npz  weights_4b_medium.npz  weights_4b_small.npz
paper/: REPORT.tex  build.sh  references.bib
python_baseline/: numpy_engine.py
results/csvs/: numpy_medium_fp32.csv  (+17 more)
scripts/: calibrate.py  compute_per_stage_mse.py  export_bin.py  export_int8_bin.py  freeze_data.py  setup_env.sh  verify_rig.sh
(+3 files in other folders)
